--- a/web/TECAir_Reservations/src/app/components/admin-editor/admin-editor.component.html
+++ b/web/TECAir_Reservations/src/app/components/admin-editor/admin-editor.component.html
@@ -1,50 +1,29 @@
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ADMIN VIEW</title>
-
-  <!-- Estilos -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css"
-  />
-
-  <!-- Scripts necesarios -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment-with-locales.min.js"
-    integrity="sha512-42PE0rd+wZ2hNXftlM78BSehIGzezNeQuzihiBCvUEB3CVxHvsShF86wBWwQORNxNINlBPuq7rG4WWhNiTVHFg=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script>
-</head>
-
 <body>
   <div class="container">
     <!-- Botones en la parte superior -->
     <div class="btn-group" role="group">
-      <button
-        *ngFor="let entity of entities"
-        type="button"
-        class="btn animated-btn"
-        (click)="setSelectedEntity(entity.value)"
-      >
-        {{ entity.label }}
-      </button>
+      <button type="button" class="btn animated-btn">Vuelo</button>
+      <button type="button" class="btn animated-btn">Escala</button>
+      <button type="button" class="btn animated-btn">Avión</button>
+      <button type="button" class="btn animated-btn">Usuario</button>
+      <button type="button" class="btn animated-btn">Promo</button>
     </div>
 
     <!-- Área de contenido -->
     <div class="content-area">
       <div class="sidebar">
-        <!-- Código del sidebar -->
+        <h3>Vuelos</h3>
+        <!-- Aquí puedes agregar el contenido de la barra lateral (ej. lista de vuelos) -->
       </div>
 
       <!-- Editor -->
       <div class="editor">
+        <!-- Check para abrir vuelo -->
+        <div class="mt-3">
+          <input type="checkbox" id="openFlightCheck" name="openFlightCheck" />
+          <label for="openFlightCheck">Abrir Vuelo</label>
+        </div>
+
         <div *ngIf="selectedEntity === 'flights' && selectedFlight != null">
           <h2>Editando vuelo: {{ selectedFlight.ffrom }}</h2>
           <form>
@@ -52,7 +31,7 @@
             <input
               type="number"
               id="price"
-              [(ngModel)]="selectedFlight.price"
+              [formControl]="priceControl"
               name="price"
             />
 
@@ -84,13 +63,11 @@
                   <!-- Colocar las opciones aquí -->
                 </select>
               </div>
-
               <div class="col-md-4">
                 <select class="form-control">
                   <!-- Colocar las opciones aquí -->
                 </select>
               </div>
-
               <div class="col-md-4">
                 <select class="form-control">
                   <!-- Colocar las opciones aquí -->
