--- a/web/TECAir_Reservations/src/app/components/admin-editor/admin-editor.component.html
+++ b/web/TECAir_Reservations/src/app/components/admin-editor/admin-editor.component.html
@@ -18,12 +18,6 @@
 
       <!-- Editor -->
       <div class="editor">
-        <!-- Check para abrir vuelo -->
-        <div class="mt-3">
-          <input type="checkbox" id="openFlightCheck" name="openFlightCheck" />
-          <label for="openFlightCheck">Abrir Vuelo</label>
-        </div>
-
         <div *ngIf="selectedEntity === 'flights' && selectedFlight != null">
           <h2>Editando vuelo: {{ selectedFlight.ffrom }}</h2>
           <form>
@@ -34,6 +28,16 @@
               [formControl]="priceControl"
               name="price"
             />
+
+            <!-- Check para abrir vuelo -->
+            <div class="mt-3">
+              <input
+                type="checkbox"
+                id="openFlightCheck"
+                name="openFlightCheck"
+              />
+              <label for="openFlightCheck">Abrir Vuelo</label>
+            </div>
 
             <!-- DateTimePicker -->
             <div class="form-group mt-3">
