--- a/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
+++ b/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
@@ -56,7 +56,11 @@
       >
         <div class="container-fluid">
           <a class="navbar-brand" routerLink="/home">TECAIR Reservations</a>
-          <div *ngIf="userLogged.fname!=''"> <a class="navbar-brand" routerLink="/home"> Bienvenido: {{userLogged.fname}}</a></div>
+          <div *ngIf="userLogged.fname != ''">
+            <a class="navbar-brand" routerLink="/home">
+              Bienvenido: {{ userLogged.fname }}</a
+            >
+          </div>
           <button
             class="navbar-toggler"
             type="button"
@@ -93,11 +97,11 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/display-check-in"
+                  <a class="nav-link" routerLink="/display-admin-editor"
                     >Editor</a
                   >
                 </li>
-                
+
                 <li class="nav-item">
                   <a class="nav-link" routerLink="/display-flights"
                     >Ver Vuelos</a
