--- a/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
+++ b/web/TECAir_Reservations/src/app/components/navbar/navbar.component.html
@@ -90,7 +90,7 @@
             </div>
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link" routerLink="/display-check-in"
                     >Check - In</a
                   >
@@ -100,7 +100,7 @@
                   <a class="nav-link" routerLink="/display-admin-editor"
                     >Editor</a
                   >
-                </li>
+                </li> -->
 
                 <li class="nav-item">
                   <a class="nav-link" routerLink="/display-flights"
