--- a/web/TECAir_Airport/src/app/components/admin-editor/admin-editor.component.html
+++ b/web/TECAir_Airport/src/app/components/admin-editor/admin-editor.component.html
@@ -1,119 +1,58 @@
 <body>
   <div class="container">
     <!-- Botones en la parte superior -->
-    <div class="btn-group" role="group">
-      <button type="button" class="btn animated-btn">Vuelo</button>
-      <button type="button" class="btn animated-btn">Escala</button>
-      <button type="button" class="btn animated-btn">Avión</button>
-      <button type="button" class="btn animated-btn">Usuario</button>
-      <button type="button" class="btn animated-btn">Promo</button>
-    </div>
 
-    <!-- Área de contenido -->
+    <!-- Botones en la parte superior -->
+    <div class="btn-group" role="group">
+      <button
+        *ngFor="let entity of entities"
+        type="button"
+        class="btn animated-btn"
+        (click)="setSelectedEntity(entity.value)"
+      >
+        {{ entity.label }}
+      </button>
+    </div>
+    <!-- 
+    Área de contenido
     <div class="content-area">
       <div class="sidebar">
-        <h3>Vuelos</h3>
-        <!-- Aquí puedes agregar el contenido de la barra lateral (ej. lista de vuelos) -->
-      </div>
+        <div *ngIf="selectedEntity === 'movies'">
+          <button class="add-entity-btn" (click)="addNewMovie()">
+            <i class="fas fa-plus-circle"></i>
+            Agregar película
+          </button>
 
-      <!-- Editor -->
-      <div class="editor">
-        <div *ngIf="selectedEntity === 'flights' && selectedFlight != null">
-          <h2>Editando vuelo: {{ selectedFlight.ffrom }}</h2>
-          <form>
-            <label for="price">Precio:</label>
-            <input
-              type="number"
-              id="price"
-              [formControl]="priceControl"
-              name="price"
-            />
-
-            <!-- Check para abrir vuelo -->
-            <div class="mt-3">
-              <input
-                type="checkbox"
-                id="openFlightCheck"
-                name="openFlightCheck"
-              />
-              <label for="openFlightCheck">Abrir Vuelo</label>
+          <ng-container *ngIf="movies && movies.length > 0; else noEntity">
+            <ul>
+              <li *ngFor="let movie of movies">
+                <button class="list-entities-btn" (click)="selectMovie(movie)">
+                  <img [src]="movie.image" alt="{{ movie.oname }}" />
+                  <div class="list-entities-info">
+                    <h2>{{ movie.oname }}</h2>
+                    <p>{{ movie.cname }}</p>
+                  </div>
+                </button>
+              </li>
+            </ul>
+          </ng-container>
+          <ng-template #noEntity>
+            <div class="no-entity-message">
+              <p>No se encontraron películas 🎬</p>
             </div>
-
-            <!-- DateTimePicker -->
-            <div class="form-group mt-3">
-              <label for="departureDate">Fecha de Salida:</label>
-              <div class="input-group date" id="picker1">
-                <input type="text" class="form-control" id="departureDate" />
-                <span class="input-group-addon">
-                  <span class="glyphicon glyphicon-calendar"></span>
-                </span>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label for="arrivalDate">Fecha de Llegada:</label>
-              <div class="input-group date" id="picker2">
-                <input type="text" class="form-control" id="arrivalDate" />
-                <span class="input-group-addon">
-                  <span class="glyphicon glyphicon-calendar"></span>
-                </span>
-              </div>
-            </div>
-
-            <!-- Dropdowns -->
-            <div class="row mt-4">
-              <div class="col-md-4">
-                <select class="form-control">
-                  <!-- Colocar las opciones aquí -->
-                </select>
-              </div>
-              <div class="col-md-4">
-                <select class="form-control">
-                  <!-- Colocar las opciones aquí -->
-                </select>
-              </div>
-              <div class="col-md-4">
-                <select class="form-control">
-                  <!-- Colocar las opciones aquí -->
-                </select>
-              </div>
-            </div>
-
-            <button
-              type="submit"
-              class="action-btn submit-btn"
-              (click)="submitFlight()"
-            >
-              Actualizar Precio
-            </button>
-            <button
-              type="button"
-              class="action-btn delete-btn"
-              *ngIf="selectedFlight.fnumber !== 0"
-              (click)="deleteFlight()"
-            >
-              Eliminar Vuelo
-            </button>
-          </form>
+          </ng-template>
         </div>
       </div>
-    </div>
-  </div>
+      </div>
 
-  <!-- Scripts al final -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js"></script>
-  <script>
-    $(function () {
-      $("#picker1").datetimepicker();
-      $("#picker2").datetimepicker({
-        useCurrent: false,
-      });
-      $("#picker1").on("dp.change", function (e) {
-        $("#picker2").data("DateTimePicker").minDate(e.date);
-      });
-      $("#picker2").on("dp.change", function (e) {
-        $("#picker1").data("DateTimePicker").maxDate(e.date);
-      });
-    });
-  </script>
+      <!-- Editor 
+      <div class="editor">
+        <!-- Flies 
+        <div *ngIf="selectedEntity === 'flights' && selectedFlight != null">
+          <h2>Editando vuelo: {{ selectedFlight.ffrom }}</h2>
+          <form></form>
+        </div>
+      </div>
+    </div> -->
+  </div>
 </body>
